Add DELETE method
