# routes/players.js
@@ -12,4 +12,7 @@ router.get("/:id", playerController.getSinglePlayer);
 // Update Player by Id
 router.put("/:id", playerController.updatePlayer);
 
+// Delete Player by Id
+router.delete("/:id", playerController.deletePlayer);
+
 module.exports = router;
