# routes/teams.js
@@ -13,4 +13,7 @@ router.get("/:id", teamController.getSingleTeam);
 // Update Team by Id
 router.put("/:id", teamController.updateTeam);
 
+// Delete Team by Id
+router.delete("/:id", teamController.deleteTeam);
+
 module.exports = router;
