# routes/tournaments.js
@@ -12,4 +12,7 @@ router.get("/:id", tournamentController.getSingleTournament);
 // Update Tournament by Id
 router.put("/:id", tournamentController.updateTournament);
 
+// Delete Tournament by Id
+router.delete("/:id", tournamentController.deleteTournament);
+
 module.exports = router;
