# routes/users.js
@@ -12,4 +12,7 @@ router.get("/:id", userController.getSingleUser);
 // Update User by Id
 router.put("/:id", userController.updateUser);
 
+// Delete User by Id
+router.delete("/:id", userController.deleteUser);
+
 module.exports = router;
